--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -22,9 +22,9 @@
   }
 
   &__row {
+    padding: 28px 0;
     @include onTablet {
       display: flex;
-
       padding: 40px 0;
     }
   }
@@ -57,7 +57,7 @@
   &__menu-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 24px 0 24px 54px;
+    padding: 0 0 24px 54px;
     gap: 24px;
 
     border-bottom: 1px solid rgba($color: #fff, $alpha: 0.5);
